:sparkles: Ref. #549 -- ZAAK.deelzaken en Zaak.hoofdzaak toegevoegd
* Zaak kan nu aangemaakt worden als deelzaak van een hoofdzaak
* validatie op hoofdzaak:
    * mag geen self-reference zijn
    * mag zelf geen deelzaak zijn
* tests toegevoegd op business rules
